[gd_scene load_steps=27 format=3 uid="uid://3xx6dc27qdqf"]

[ext_resource type="Script" path="res://player.gd" id="1_b8584"]
[ext_resource type="Texture2D" uid="uid://lffayxgtbxq" path="res://assets/sprites/LIGHT.png" id="3_pt35c"]
[ext_resource type="Texture2D" uid="uid://dmdng4ybdkkw0" path="res://assets/sprites/PLAYER_SPRITESHEET.png" id="3_rdoyk"]
[ext_resource type="Texture2D" uid="uid://b5aj4a1yf2xyh" path="res://assets/sprites/get_up.png" id="4_sghx2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itjk0"]
size = Vector2(12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yf50"]
atlas = ExtResource("4_sghx2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoic0"]
atlas = ExtResource("4_sghx2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pijj8"]
atlas = ExtResource("4_sghx2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ublsr"]
atlas = ExtResource("4_sghx2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rogf"]
atlas = ExtResource("3_rdoyk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnb0p"]
atlas = ExtResource("3_rdoyk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l5i8"]
atlas = ExtResource("3_rdoyk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2e7l"]
atlas = ExtResource("3_rdoyk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j7rq"]
atlas = ExtResource("3_rdoyk")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvi3y"]
atlas = ExtResource("3_rdoyk")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ge6"]
atlas = ExtResource("3_rdoyk")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_16eb6"]
atlas = ExtResource("3_rdoyk")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c2vs"]
atlas = ExtResource("3_rdoyk")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewve5"]
atlas = ExtResource("3_rdoyk")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfaib"]
atlas = ExtResource("3_rdoyk")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfqvy"]
atlas = ExtResource("3_rdoyk")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2cl1"]
atlas = ExtResource("3_rdoyk")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxdfe"]
atlas = ExtResource("3_rdoyk")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i85c4"]
atlas = ExtResource("3_rdoyk")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qugph"]
atlas = ExtResource("3_rdoyk")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8vpm"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_5yf50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoic0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pijj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ublsr")
}],
"loop": true,
"name": &"GET_UP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rogf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnb0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l5i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2e7l")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j7rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvi3y")
}],
"loop": true,
"name": &"LEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ge6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16eb6")
}],
"loop": true,
"name": &"RIGHT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c2vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewve5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfaib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfqvy")
}],
"loop": true,
"name": &"climbLEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2cl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxdfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i85c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qugph")
}],
"loop": true,
"name": &"climbRIGHT",
"speed": 5.0
}]

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_b8584")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_itjk0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 9)
zoom = Vector2(7, 7)

[node name="climb_time" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
color = Color(1, 0.951068, 0.860357, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("3_pt35c")
texture_scale = 1.5

[node name="CanvasModulate" type="CanvasModulate" parent="."]
light_mask = 2
visibility_layer = 2
color = Color(0, 0, 0, 1)

[node name="PLAYER" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w8vpm")
animation = &"GET_UP"
frame_progress = 0.224856

[node name="get_up timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="climb_time" to="." method="_on_climb_time_timeout"]
[connection signal="timeout" from="get_up timer" to="." method="_on_get_up_timer_timeout"]
